--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
       margin: 10px 0;
     }
     #score {
-      margin-top: 20px;
+      margin-top: 30px;
+      padding: 20px;
+      font-size: 2em;
       font-weight: bold;
-      font-size: 1.2em;
+      background-color: #f0f8ff;
+      color: #2c3e50;
+      border: 2px solid #2c3e50;
+      border-radius: 10px;
+      text-align: center;
     }
   </style>
 </head>
@@ -130,7 +136,6 @@
       scoreDiv.textContent = `✅ Score: ${score} points`;
     }
 
-    // Initial setup
     document.getElementById("age").addEventListener("change", updateGenres);
     updateGenres();
   </script>
